add preload animation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
     <title>Notes</title>
 </head>
 <body>
+    <!-- PRELOAD  -->
+    <div class="preload-wrapper">
+        <!-- <div class="preload__loader"></div> -->
+        <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
+    <!-- END PRELOAD -->
+    <!-- MAIN CONTENT -->
     <div class="main">
         <div class="main-wrapper">
-
             <!-- HEADER -->
             <header class="header">
                 <h1 class="title">Notes</h1>
