--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     </div>
     <!-- END PRELOAD -->
+    <!-- IMG -->
+    <img src="img/earth.png" alt="" class="bg-img" width="100px" height="100px">
+    <img src="img/planet1.png" alt="" class="bg-img">
+    <img src="img/planet2.png" alt="" class="bg-img">
+    <img src="img/planet3.png" alt="" class="bg-img">
+    <img src="img/planet4.png" alt="" class="bg-img">
+    <img src="img/planet5.png" alt="" class="bg-img">
+    <img src="img/planet6.png" alt="" class="bg-img">
+    <img src="img/planet7.png" alt="" class="bg-img">
+
     <!-- MAIN CONTENT -->
     <div class="main">
         <div class="main-wrapper">
