add bg img for app

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Notes</title>
 </head>
 <body>
+
     <!-- PRELOAD  -->
     <div class="preload-wrapper">
         <!-- <div class="preload__loader"></div> -->
@@ -25,15 +26,20 @@
     </div>
     <!-- END PRELOAD -->
     <!-- IMG -->
-    <img src="img/earth.png" alt="" class="bg-img" width="100px" height="100px">
-    <img src="img/planet1.png" alt="" class="bg-img">
-    <img src="img/planet2.png" alt="" class="bg-img">
-    <img src="img/planet3.png" alt="" class="bg-img">
-    <img src="img/planet4.png" alt="" class="bg-img">
-    <img src="img/planet5.png" alt="" class="bg-img">
-    <img src="img/planet6.png" alt="" class="bg-img">
-    <img src="img/planet7.png" alt="" class="bg-img">
+    <div class="img-wrapper">
+        <img src="img/earth.png" alt="" class="bg-img">
+        <img src="img/planet1.png" alt="" class="bg-img">
+        <img src="img/planet2.png" alt="" class="bg-img">
+        <img src="img/planet3.png" alt="" class="bg-img">
+        <img src="img/planet4.png" alt="" class="bg-img">
+        <img src="img/planet5.png" alt="" class="bg-img">
+        <img src="img/planet6.png" alt="" class="bg-img">
+        <img src="img/planet7.png" alt="" class="bg-img">
+    </div>
 
+    <!-- BG -->
+    <!-- <img src="img/bg.png" alt="background png" class="bg-img">
+    <img src="img/bg2.png" alt="background png" class="bg-img"> -->
     <!-- MAIN CONTENT -->
     <div class="main">
         <div class="main-wrapper">
