add bg img animation , edit readme

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <img src="img/planet5.png" alt="" class="bg-img">
         <img src="img/planet6.png" alt="" class="bg-img">
         <img src="img/planet7.png" alt="" class="bg-img">
+        <img src="img/bg.png" alt="background png" class="bg bg-dark">
+        <img src="img/bg2.png" alt="background png" class="bg bg-light">
     </div>
 
     <!-- BG -->
-    <!-- <img src="img/bg.png" alt="background png" class="bg-img">
+    <!-- 
     <img src="img/bg2.png" alt="background png" class="bg-img"> -->
     <!-- MAIN CONTENT -->
     <div class="main">
