--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <!-- END PRELOAD -->
     <!-- IMG -->
     <div class="img-wrapper">
-        <img src="img/earth.png" alt="" class="bg-img">
-        <img src="img/planet1.png" alt="" class="bg-img">
-        <img src="img/planet2.png" alt="" class="bg-img">
-        <img src="img/planet3.png" alt="" class="bg-img">
-        <img src="img/planet4.png" alt="" class="bg-img">
-        <img src="img/planet5.png" alt="" class="bg-img">
-        <img src="img/planet6.png" alt="" class="bg-img">
-        <img src="img/planet7.png" alt="" class="bg-img">
-        <img src="img/bg.png" alt="background png" class="bg bg-dark">
-        <img src="img/bg2.png" alt="background png" class="bg bg-light">
+        <img src="img/mobile/earth.png" alt="" class="bg-img">
+        <img src="img/mobile/planet1.png" alt="" class="bg-img">
+        <img src="img/mobile/planet2.png" alt="" class="bg-img">
+        <img src="img/mobile/planet3.png" alt="" class="bg-img">
+        <img src="img/mobile/planet4.png" alt="" class="bg-img">
+        <img src="img/mobile/planet5.png" alt="" class="bg-img">
+        <img src="img/mobile/planet6.png" alt="" class="bg-img">
+        <img src="img/mobile/planet7.png" alt="" class="bg-img">
+        <!-- <img src="img/bg.png" alt="background png" class="bg bg-dark">
+        <img src="img/bg2.png" alt="background png" class="bg bg-light"> -->
         <img src="img/resize/bg.png" alt="background png" class="bg bg-dark">
         <img src="img/resize/bg2.png" alt="background png" class="bg bg-light">
     </div>
